# coding-challenge

./: README.md  pyproject.toml
src/pyfold/: __init__.py  fold.py
tests/: test_folding.py
